# Software-Engineering-mit-Python---Bootcamp

./: .gitignore  README.md
03_ModulesUndPackages/: main.py
03_ModulesUndPackages/package_a/: module_a1.py
03_ModulesUndPackages/package_b/: module_b2.py
04_CleanCode/: bad.py  good.py
05_TypeHinting/: type_hints.py
15_Typer/: intro.py
16_CapstoneProject/: .env  app.db  pyproject.toml
16_CapstoneProject/password_manager/: cli.py
16_CapstoneProject/src/app/: cli.py  database.py  main.py  utils.py
16_CapstoneProject/tests/: test_cli.py  test_utils.py
